Closed
Bug 13700
Opened 26 years ago
Closed 26 years ago
Warning: "overwriting current primary frame" at file nsFrameManager.cpp, line 273
Categories
(Core :: Layout, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: akkzilla, Assigned: troy)
References
()
Details
As of this morning's build (9/13), I get lots of these on nearly every page I
load:
Warning: "overwriting current primary frame" at file nsFrameManager.cpp, line
273
Status: NEW → RESOLVED
Closed: 26 years ago
Resolution: --- → INVALID
Akkana, you should know better than to submit a bug like this. There's no sample
URL or anything to reproduce the problem.
| Reporter | ||
Updated•26 years ago
|
Status: RESOLVED → REOPENED
| Reporter | ||
Comment 2•26 years ago
|
||
I didn't think it was necessary since I see it on every page I load, but okay,
here's the one I've been doing lately: run
apprunner "http://bugzilla.mozilla.org/showattachment.cgi?attach_id=1619"
and enjoy the 40 repetitions of this warning.
Okay, so I'm not seeing it in my tree which means it must be a change sometime
between like 5PM yesterday and whenever you pulled
| Reporter | ||
Comment 4•26 years ago
|
||
I pulled at around 11am 9/13.
No, I'm pulling and building to see if I can reproduce the problem
Status: REOPENED → RESOLVED
Closed: 26 years ago → 26 years ago
Resolution: --- → FIXED
So the reason I'm not seeing any of those annoying messages is that NS_WARNING
doesn't seem to do much of anything on Windows. It doesn't print to the console
anyway
I set a breakpoint and looked at it in the debugger. It's all the same case
where images aren't loading and we replace the image frame with the alternate
content instead.
The warning in SetPrimaryFrameFor() was really only needed in the very beginning
to make sure nothing silly was happening.
I'm removing the warning
Updated•26 years ago
|
Status: RESOLVED → VERIFIED
Comment 8•26 years ago
|
||
Based on troy's comments, marking as verified fixed in the Sept 23rd build.
You need to log in
before you can comment on or make changes to this bug.
Description
•