Fix for bug #13700. Removed a warning that's no longer needed